@@ -72,7 +72,7 @@ static char avoidRecursion = 0;
 // pointer to one of the buttons or an Fl_Window* pointer to the
 // message window (message_form).
 static void button_cb(Fl_Widget *, void *val) {
-  ret_val = (int)(long)val;
+  ret_val = (fl_intptr_t)val;
   message_form->hide();
 }
 
